sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:21: error: '(' expected but identifier found.
  if i>=0 {
     ^NaiveBaseball:26: error: illegal start of simple expression
} 
^